# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "nerdondon-hopscotch"
authors = ["nerdondon"]
description = "A skip list"
repository = "https://github.com/nerdondon/hopscotch"
version = "1.1.0"
edition = "2018"
license = "MIT"

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
